[package]
name = "titanvault-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-crypto = "0.2.36"
dotenv = "0.15"
k256 = "0.13.4"

[lib]
name = "titanvault_backend"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"
