[package]
name = "titanvault-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15"
k256 = "0.13.4"
hex= "0.4.3"
alloy-core = "0.8.23"
alloy-primitives = "0.8.23"
alloy-signer = "0.12.6"

[lib]
name = "titanvault_backend"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"
